--- a/my_project/package.json
+++ b/my_project/package.json
@@ -11,7 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.20",
+    "@heroicons/vue": "^2.1.3",
     "@popperjs/core": "^2.11.8",
+    "tailwindcss": "^3.4.3",
     "vue": "^3.4.21"
   },
   "devDependencies": {
